Baza dodana do projektu

--- a/Calendarro/appsettings.json
+++ b/Calendarro/appsettings.json
@@ -1,5 +1,9 @@
 {
+  "ConnectionStrings": {
+    "ContentBase": "Server=.\\SQLExpress;Database=CalendarroDB;Trusted_Connection=True;"    
+  },
   "Logging": {
+
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
