Dodadnie systemu logowania

--- a/Calendarro/appsettings.json
+++ b/Calendarro/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "ContentBase": "Server=.\\SQLExpress;Database=CalendarroDB;Trusted_Connection=True;"    
+    "ContentBase": "Server=.\\SQLExpress;Database=CalendarroDB;Trusted_Connection=True;",
+    "LoginContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Calendarro;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
