--- a/Calendarro/Calendarro.csproj
+++ b/Calendarro/Calendarro.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <UserSecretsId>4829534e-aae4-432e-9624-77785a5c9392</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
