łaczenie bazy Identity

--- a/Calendarro/appsettings.json
+++ b/Calendarro/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "ContentBase": "Server=.\\SQLExpress;Database=CalendarroDB;Trusted_Connection=True;",
-    "LoginContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Calendarro;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LoginContextConnection": "Server=.\\SQLExpress;Database=CalendarroIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
