Finalna implementacja bazy danych

--- a/Calendarro/appsettings.json
+++ b/Calendarro/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "ConnectionStrings": {
-    "ContentBase": "Server=.\\SQLExpress;Database=CalendarroDB;Trusted_Connection=True;",
-    "LoginContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Calendarro;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  // Dane do bazy beda dla kazdego osobne -> USER SECRETS
+  // Nie trzeba bedzie zmieniac za kazdym razem :)
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
