--- a/Calendarro.Test/Calendarro.Test.csproj
+++ b/Calendarro.Test/Calendarro.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.2.4" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="SendGrid" Version="9.23.2" />
   </ItemGroup>
 
   <ItemGroup>
